# advent-2023

./: .gitignore  CHANGELOG.md  README.md  advent-of-code.cabal
1/: calibration.hs
app/: Main.hs
lib/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Util.hs
test_resources/day1/: test1.txt
tests/: TestAll.hs  TestDay1.hs  TestDay3.hs  TestDay4.hs  TestDay5.hs
