cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Advent of Code exercises

-- A longer description of the package.
description: >
   Advent of Code is an Advent calendar of small programming puzzles for a 
   variety of skill sets and skill levels that can be solved in any programming
   language you like. This year I am doing it in Haskell.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brian Walshe
maintainer:         walshe.brian@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md



library advent-of-code-lib
    exposed-modules: Day1, Day2, Day3, Day4, Day5
    hs-source-dirs: lib
    build-depends:    
      base ^>=4.16.4.0,
      text ^>=1.2.5.0,
      containers ^>=0.6.5.1,
      megaparsec ^>=9.6.1,
      vector ^>=0.13.1.0
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: TestAll.hs
    build-depends: 
      base ^>=4.16, 
      text ^>= 1.2.5.0,
      HUnit ^>=1.6, 
      containers ^>=0.6.5.1,
      megaparsec ^>=9.6.1,
      vector ^>=0.13.1.0,
      advent-of-code-lib
    hs-source-dirs: tests
    other-modules: TestDay1, TestDay3, TestDay4, TestDay5
    data-files: test_resources/**
    default-language: Haskell2010

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0, 
      text ^>= 1.2.5.0, 
      megaparsec ^>=9.6.1,
      advent-of-code-lib
    hs-source-dirs:   app
    default-language: Haskell2010
